字与字长以及字长之间的关系

--- a/计算机组成原理/第一章-计算机系统概述.md
+++ b/计算机组成原理/第一章-计算机系统概述.md
@@ -165,3 +165,11 @@ $$
 ###### 总结
 
 ![image-20220719203803487](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207192040516.png)
+
+###### 字长的区分
+
+![image-20220720173108967](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207201731963.png)
+
+###### 字和字长的关系
+
+![image-20220720174943478](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207201749016.png)
