上传照片信息

--- a/计算机组成原理/第二章-数据的表示和运算.md
+++ b/计算机组成原理/第二章-数据的表示和运算.md
@@ -1,2 +1,320 @@
 # 第二章-数据的表示和运算
 
+## 2.1 数制与编码
+
+### 2.1.1 进位计数制及相互转化
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040536.png" alt="image-20220721091810907" style="zoom:50%;" />
+
+#### 十进制
+
+![image-20220721092301477](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040537.png)
+
+#### 二进制
+
+##### 计算机使用`二进制原因`
+
+![image-20220721092913733](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040538.png)
+
+##### 二进制`->`十进制
+
+![image-20220721093705524](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040539.png)
+
+- 只需要每一位对应数字乘以权重即可
+
+##### 二进制`->`其他进制
+
+![image-20220721095733546](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040540.png)
+
+- 十六进制1位对应二进制4位
+
+- 前后缀表示
+ ```xml
+  十进制数，没有前缀 后缀D
+  二进制数，前缀是0b 后缀B
+  八进制数，前缀是0o 后缀O
+  十六进制数，前缀是0x 后缀H
+ ```
+
+##### 十进制`->`二进制
+
+###### 整数部分
+
+![image-20220721101020409](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040541.png)
+
+###### 小数部分
+
+![image-20220721101526471](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040542.png)
+
+- 如果`十进制`要转化成`八进制`或者`十六进制`
+  1. 先转成二进制,再表示成八进制或者十六进制
+  2. 基数由2变成8或者16
+- 小数部分可能无法精确表示  例如`0.3D`是一个**无限不循环二进制**数`0.01001...B`
+
+- 如何记忆?
+  - 上面的高位或者低位都是`最靠近第0位`开始算的
+
+#### 真值和机器数
+
+![image-20220721102152268](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040543.png)
+
+### 2.1.2 BCD码*
+
+- 4位二进制数表示的一个十进制数
+
+### 2.1.3 无符号整数的表示和运算
+
+- 无符号整数:即`自然数 : 0,1,2,3....`
+
+- C语言表示
+
+  ```c
+  unsigned short a = 1;  //无符号整数 短整型 2B
+  unsigned int b = 2;    //无符号整数 整型 4B
+  ```
+
+#### 无符号整数的表示
+
+![image-20220721104345251](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040544.png)
+
+#### 无符号整数的加法
+
+![image-20220721104622957](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040545.png)
+
+#### 无符号整数的减法
+
+![image-20220721105246894](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040546.png)
+
+- 加法电路便宜,,减法电路贵,因此做减法转化成做加法
+- **被减数全部位求反+1**
+
+### 2.1.4 带符号整数的表示和运算
+
+- 带符号整数 即`整数: -2,-1,0,1,2,3...`
+
+- C语言表示
+
+  ```c
+  short a = 1; //带符号整数 短整型 2B
+  int b = 2;   //带符号整数 整形 4B
+  ```
+
+#### 带符号整数如何表示?
+
+##### 原码表示
+
+![image-20220721110923141](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040547.png)
+
+- `n+1`位带符号整数**原码**范围:
+
+$$
+-(2^n-1)\le x\le 2^n-1
+$$
+
+###### 原码表示缺点
+
+![image-20220721111646996](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040548.png)
+
+- **符号位不能参与运算**
+- 用补码解决
+
+##### 补码的表示
+
+![image-20220721112027595](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040549.png)
+
+- 正数
+  - 原码补码反码都是本身
+
+###### 负数的原码补码转化
+
+1. 符号位不变,,从右往左找到第一个1,,这个1`左边的所有"数值位"`按位求反即可
+
+2. 符号位不变,数值位求反+1
+
+##### 补码的加法运算
+
+![image-20220721113607856](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040550.png)
+
+- 负数补码`权值`需要转化成`原码`才能直接看出
+- **补码符号位参与运算**
+
+##### 补码的减法运算
+
+​	![image-20220721114533823](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040551.png)
+
+###### 相反数的补码转化
+
+1. 从右往左第一个1,,这个1左边的的`"所有位"都取反`即可
+2. 全部位为求反,末尾+1
+
+> 和无符号整数的减法操作相同
+>
+> 也意味着可以用**同一个电路**,`实现无符号数的加法减法操作`以及`补码的加法减法操作`
+
+### 2.1.5 原/补/反码的特性对比
+
+|    n+1/bit     |   合法表示范围    |     最大值      |      最小值      |            真值0的表示             |
+| :------------: | :---------------: | :-------------: | :--------------: | :--------------------------------: |
+| 带符号整数原码 | `-(2ⁿ-1)≤x ≤2ⁿ-1` | `0,1111 = 2ⁿ-1` | `1,1111=-(2ⁿ-1)` |  `[0+]原:0,0000` `[0-]原: 1,0000`  |
+| 带符号整数反码 |       同上        |      同上       | `1.0000=-(2ⁿ-1)` | `[0+]反: 0,0000` ` [0-]反:1 ,1111` |
+| 带符号整数补码  | `-2ⁿ ≤ x ≤ 2ⁿ-1`  |      同上       | `1.0000=-2ⁿ` |  `[0]补:0000`  真值0只有一种补码   |
+|    无符号数    | `0 ≤ x ≤2ⁿ⁺¹-1` | `1.1111=2ⁿ⁺¹-1` | `0.0000=0` | 0.0000 |
+
+1. 原码和反码:表示范围完全相同,都有两种方法表示`真值0`
+2. 补码的合法性 表示范围比原码,,`多表达一个负数`,,真值0只有`0,0000`表示
+
+###### 考点
+
+> a+b进行某种运算之后,是否发生溢出,,需要手写转化成十进制验证,是否溢出
+>
+> 例如,-64 + -64 = -128 
+>
+> 如果是原码表示,则溢出,因为原码只有-127~127 
+>
+> 但是反码不会溢出,,因为反码-128~127
+
+### 2.1.6 移码
+
+- **移码:将补码的符号位求反即可**
+- 只能表示整数,而其他的原/反/补码可以表示小数
+- 表示范围和`补码`一样
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040552.png" alt="image-20220721170825678" style="zoom:50%;" />
+
+- 由移码表示的整数,方便用硬件电路比较
+
+###### 习题
+
+![image-20220721172342788](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040553.png)
+
+### 2.1.7 定点小数的表示和运算
+
+![image-20220721173251589](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040554.png)
+
+#### 定点小/整数对比
+
+![image-20220721174107615](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040555.png)
+
+- 位数扩展,`补0的位置`不一样
+
+- **定点小数的加法和减法和定点整数的加法和减法一样**
+
+### 2.1.8 n+1位 定点数的机器表示
+
+##### 原码
+
+###### 小数
+
+$$
+\begin{equation}
+[x]_{小数原码}
+\begin{cases}
+\qquad x \qquad \qquad\qquad\qquad \text{ $ x \in [0,1) $ } \\
+1-x=1+|x| \qquad\qquad\text{ $ x \in (-1,0] $ }
+\end{cases}
+\end{equation}
+$$
+
+表示范围
+$$
+-(1-2^n) \le x \le(1-2^n)
+$$
+
+
+###### 整数(了解)
+
+$$
+\begin{equation}
+[x]_{整数原码}
+\begin{cases}
+\qquad x \qquad \qquad\qquad\qquad \text{ $ x \in [1,2^n) $ } \\
+2^n-x=2^n+|x| \quad\qquad\text{ $ x \in (-2^n,0] $ }
+\end{cases}
+\end{equation}
+$$
+
+表示范围
+$$
+-(2^n-1)\leq x\le 2^n-1
+$$
+
+
+##### 补码
+
+###### 小数(了解)
+
+$$
+\begin{equation}
+[x]_{小数补码}
+\begin{cases}
+\qquad x \qquad \qquad\qquad\qquad \text{ $ x \in [0,1) $ } \\
+2+x=2-|x| \qquad\qquad\text{ $ x \in [-1,0] $ }
+\end{cases}
+\qquad (\ mod 2\ ) 
+\end{equation}
+$$
+
+表示范围
+$$
+-1\le x<1-2^{-n}\\
+比原码多表示-1,为1_. 000..
+$$
+
+
+###### 整数
+
+$$
+\begin{equation}
+[x]_{整数补码}
+\begin{cases}
+\qquad x \qquad \qquad\qquad\qquad\qquad \text{ $ x \in [0,2^{n}) $ } \\
+2^{n+1}+x=2^{n+1}-x\qquad \qquad\text{ $ x \in [-2^{n},0] $ }
+\end{cases}
+\qquad mod \ (2^n+1)
+\end{equation}
+$$
+
+表示范围
+$$
+-2^n\le x\le 2^n-1\\
+比原码多表示-2^n,为1,000..
+$$
+
+
+##### 变形补码
+
+- 又称 模4补码 ,, `双符号位的补码小数`
+
+
+$$
+\begin{equation}
+[x]_{模4补码}
+\begin{cases}
+\qquad x \qquad \qquad\qquad\qquad \text{ $ x \in [0,1) $ } \\
+4+x=4-|x| \qquad \qquad\text{ $ x \in (-1,0] $ }
+\end{cases}
+\qquad mod 4
+\end{equation}
+$$
+
+- 双符号位
+  - 00:正
+  - 11:负
+  - 用在算数运算的`ALU`中
+- 符号位和数值位一起右移,,并保持符号位值不变,,可以实现`除法`功能
+
+
+
+##### 移码
+
+- 常用来表示`浮点数的阶码`
+
+$$
+[x]_{移码}=2^n+x\\
+-2^n\le x <2^n
+$$
+
+
+
+
+
