运算器的核心部件加法器的电路原理以及串行和并行加法的概念

--- a/计算机组成原理/第二章-数据的表示和运算.md
+++ b/计算机组成原理/第二章-数据的表示和运算.md
@@ -324,5 +324,96 @@ $$
 
 
 
+## 2.2 运算方法和运算电路
+
+### 2.2.1 基本运算部件
+
+![image-20220722155222316](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221552229.png)
+
+- ALU大小和寄存器的大小,,这样能更好的存数
+- 基本的输入信号,输出信号,以及CU控制信号
+
+###### 加法器原理
+
+![image-20220722172116613](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221721918.png)
+
+###### 基本的逻辑运算
+
+![image-20220722162917734](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221629038.png)
+
+###### 运算法则
+
+![image-20220722163302835](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221633218.png)
+
+###### 符合逻辑电路
+
+![image-20220722163728153](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221637897.png)
+
+- `反演率`: 大横线拆则变符号
+
+#### 一位全加器
+
+![image-20220722165015963](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221650925.png)
+
+#### 串行加法器
+
+![image-20220722165305531](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221653339.png)
+
+#### 并行加法器
+
+##### 串行进位
+
+![image-20220722165736424](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221657119.png)
+
+- **加法是并行的**
+- **进位是串行的**
+- **运算速度取决于进位产生和传递的速度**
+
+#####  并行进位
+
+###### 如何更快的产生进位?
+
+![image-20220722170751530](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221709750.png)
+
+###### 并行进位的并行加法器
+
+![image-20220722171538098](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221715452.png)
+
+### 2.2.3 补码加减运算器
+
+###### 补码加减法运算
+
+ALU加法器实现减法操作
+
+- `[X补]`通过全部位求反+1后得到`[-X]补`
+
+![image-20220722172921945](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220722172921945.png)
+
+###### 电路实现
+
+1. 补码
+
+![image-20220722173525876](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221735503.png)
+
+2. 无符号数
+
+![image-20220722173650786](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221736360.png)
+
+3. **但是在判断是否产生溢出,,补码和无符号数的电路情况明显不同**
+
+
+
+### 2.2.4 标志位的生成
+
+###### 标志位
+
+![image-20220722174136631](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221741951.png)
+
+
+
+###### 标志位适用范围
+
+![image-20220722174159060](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221742596.png)
+
 
 
