--- a/计算机组成原理/第二章-数据的表示和运算.md
+++ b/计算机组成原理/第二章-数据的表示和运算.md
@@ -387,7 +387,7 @@ ALU加法器实现减法操作
 
 - `[X补]`通过全部位求反+1后得到`[-X]补`
 
-![image-20220722172921945](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220722172921945.png)
+![image-20220722172921945](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221749235.png)
 
 ###### 电路实现
 
