原码以及补码的乘法运算

--- a/计算机组成原理/第二章-数据的表示和运算.md
+++ b/计算机组成原理/第二章-数据的表示和运算.md
@@ -417,3 +417,154 @@ ALU加法器实现减法操作
 
 
 
+### 2.2.5 移位运算
+
+移位运算
+
+![image-20220724200337233](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242003457.png)
+
+#### 算术移位
+
+##### 原码
+
+![image-20220724200939565](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242009943.png)
+
+##### 反码
+
+![image-20220724201147891](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242011877.png)
+
+##### 补码
+
+![image-20220724201805719](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242018150.png)
+
+##### 算术移位总结
+
+![image-20220724202245350](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242025077.png)
+
+##### 算术移位的应用
+
+###### 乘法移位的实现
+
+![image-20220724202649471](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242029937.png)
+
+#### 逻辑移位
+
+- `针对于无符号数的算术移位`
+
+![image-20220724202830056](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242028491.png)
+
+##### 逻辑移位的应用
+
+###### `RGB`的实现
+
+![image-20220724203400758](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242034959.png)
+
+#### 循环移位
+
+![image-20220724203754133](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242037442.png)
+
+##### 大小端存储
+
+- 大端存储:数据存放顺序:`高低`
+- 小端存储:数据存放顺序:`低高`
+- 循环左移或者右移,则使得大小端对换
+
+![image-20220724204329095](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242043608.png)
+
+#### 移位总结
+
+![image-20220724204508880](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242045971.png)
+
+### 2.2.6 定点数乘法运算
+
+#### 2.2.6_1 原码乘法
+
+###### 手算十进制乘法
+
+![image-20220724205121529](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242051177.png)
+
+###### 手算二进制乘法
+
+![image-20220724210325850](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242103104.png)
+
+##### 原码一位乘
+
+![image-20220724210819321](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242108933.png)
+
+##### 机器实现
+
+![image-20220724211044191](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242110442.png)
+
+1. **第一步** :**先加法**
+
+   `ACC(乘积高位)`清零
+
+   `X(被乘数)`
+
+   `MQ(乘数以及乘积低位)`
+
+![image-20220724211258293](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220724211258293.png)
+
+2. **再右移**
+
+由于第二次相加的时候,需要有一个错位,,因此将`ACC`和`MQ`统一**逻辑右移**
+
+![image-20220724212207164](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242122729.png)
+
+3. 最终结果 
+
+![image-20220724212616923](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242126961.png)
+
+4. 根据单独处理的符号位**修改符号位**
+
+![image-20220724213153067](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207242131499.png)
+
+##### 总结
+
+- 每次乘法先将`X`(通用寄存器的`被乘数`)以及`ACC(乘积高位)`送到`ALU`中进行累加运算
+- 将累加结果送到`ACC`中
+- 将`ACC+MQ(存放乘数以及乘积低位)`中的数字`右移1位`,导致`MQ(存放乘数位数-1,但是运算结果右移一位)`
+
+##### 原码乘法--题型 
+
+![image-20220725213149796](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207252131463.png)
+
+- 整数乘法步骤一样,,只是`小数点的位置不同`而已
+
+#### 2.2.6_2 补码乘法
+
+##### 原码一位乘的区别
+
+![image-20220725234010382](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207252340520.png)
+
+##### 机器实现
+
+![image-20220725234843221](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207252348706.png)
+
+- 为了实现`[X]补`--> `[-X补]`   ,会有辅助电路实现对应`[-X补]`的转换
+
+
+
+##### 补码乘法--题型
+
+![image-20220725235905542](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207252359058.png)
+
+- 原码每一次移动是逻辑右移,,**直接补0**
+- 补码每一次移动是算术右移,,**右移补符号位**,,因为符号位参与运算
+
+
+
+### 2.2.7 定点数除法运算
+
+
+
+
+
+
+
+
+
+
+
+
+
