定点小数的原码除法__主要讲了1.恢复余数法   2.不恢复余数(加减交替法)         补码除法__参考原码的加减交替法

--- a/计算机组成原理/第二章-数据的表示和运算.md
+++ b/计算机组成原理/第二章-数据的表示和运算.md
@@ -503,7 +503,7 @@ ALU加法器实现减法操作
 
    `MQ(乘数以及乘积低位)`
 
-![image-20220724211258293](C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220724211258293.png)
+![image-20220724211258293](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207261937534.png)
 
 2. **再右移**
 
@@ -556,15 +556,129 @@ ALU加法器实现减法操作
 
 ### 2.2.7 定点数除法运算
 
+#### 2.2.7_1 原码除法
+
+##### 手算十进制除法
+
+![image-20220726195326626](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207261953442.png)
+
+- `商的结果`是为了使得`商*除数最接近被除数,但是不大于除数`,也就是`余数最小`
+- 除法也就是`不断拼凑余数`的过程
+
+##### 手算二进制除法
+
+![image-20220726201059680](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207262011700.png)
+
+- 可忽略小数点
+- 除到机器字长则结束
 
 
 
+##### 恢复余数法
+
+###### 机器实现
+
+1. 根据给出的`被除数X,除数Y的原码`,分别写出`|X|原` ` |Y|原` `  [ |Y|]补 ` ` [- |Y|]补`
+
+![image-20220726203049714](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207262030853.png)
+
+2. `MQ`默认上商`1`,,当不符合规律时,,修改位上商`0`,,并且**恢复(上商 1 之前的)余数**
+
+![image-20220726203732489](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207262037895.png)
+
+3. `判断何时恢复余数?`
+
+
+$$
+ACC_{被除数|余数}-X_{除数}<0 \iff ACC_{余数}+[-Y]_{补码}\\
+ACC_{余数}=1\\
+
+不合法
+$$
+![image-20220726204247245](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207262042902.png)
+
+4. **恢复余数**
+
+$$
+ACC_{余数}+X_{除数}\rightarrow ACC_{余数} \iff  ACC_{余数}+[Y]_{补码}\\
+恢复余数法
+$$
+
+![image-20220726211317617](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207262113189.png)
+
+- 余数最低位补0
+  - 通过`ACC+MQ`**逻辑左移**
+
+5. 不用恢复余数的情况
+
+![image-20220726211522699](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207262115858.png)
+
+6. 计算结束
+
+![image-20220726212155381](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207262121693.png)
+
+7. `小数点的隐含位置 ` 确定`MQ(商)` `ACC(最终余数)`  
+
+![image-20220726212305386](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207262123221.png)
+
+- 注:如果最终`ACC`中余数为负数,,则仍然需要**恢复余数**
+
+###### 手算实现
+
+![image-20220726212909033](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207262129163.png)
+
+- 机器字长`n+1`位 
+  - 上商`n+1`次
+  - 逻辑左移`n`次,,,最后一次上商确认最终答案之后,不需要逻辑左移
+
+![image-20220727192036089](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207271920006.png)
+
+##### 优化:恢复余数
+
+![image-20220727193101887](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207271931927.png)
+
+##### 加减交替法
+
+> 又称 "不恢复余数法"
+
+- 并不是完全不恢复余数
+  - 如果最后一步的余数结果为负数
+  - 上商`0`
+  - `+|Y|补`**恢复真正的余数**
+
+![image-20220727193617866](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207271936310.png)
+
+- `达到恢复余数的方法`:将负数余数左移一位,然后+|Y|补
+- 余数为正数,说明合法,,则继续余数左移一位,然后+|-Y|补
+
+![image-20220727194033680](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207271940245.png)
+
+- Tip:由于是**定点小数**,则
+
+机器将自动确认:产生的余数小于0,为负数
+$$
+ACC_{被除数}-X_{除数}\rightarrow ACC_{余数}<0\\ 
+\iff ACC_{被除数}<X_{除数}\\
+\iff MQ_{商}为小数
+$$
+否则,程序将自动停止,因为**定点小数**不能超过`1.0`
 
 
 
+#### 2.2.7_2 补码除法
 
+类似于上节原码  `加减交替法`
 
+![image-20220727200704127](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207272007417.png)
 
+##### 加减交替法
 
+- **双符号** & **参与运算**
+- `MQ`恒为 `1`
+  - 也不需要再像原码一样最后一步需要考虑恢复余数
 
+![image-20220727201616391](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207272016491.png)
 
+#### 除法总结
+
+![image-20220727202100466](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207272021617.png)
