C语言的强制类型转换原理   以及    数据的存储与排列  1.大小端地址     2.边界对齐(每次访问只能按字存取)

--- a/计算机组成原理/第二章-数据的表示和运算.md
+++ b/计算机组成原理/第二章-数据的表示和运算.md
@@ -691,3 +691,74 @@ $$
 #### 除法总结
 
 ![image-20220727202100466](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207272021617.png)
+
+### 2.2.8 C语言中的强制类型转换
+
+#### 定点整数
+
+- 补码形式存储
+- 短变长:不需要强制转换
+- 长变短:需要强制转换
+
+```c++
+#include<stdio.h>
+using namespace std;
+int main() {
+	/* 
+		无符号数与有符号数
+		不改变数据本身的内容
+		改变解释方式
+	*/
+	short x = -4321;//short占用2个字节
+	unsigned short y = (unsigned short)x; //有符号数字强制转换成无符号数字
+
+	/* 
+		长整数变成短整数
+		高位截断,保留低位
+		补码形式计算真值
+	 */
+	int a = 165537, b = -34991;//int 占用4个字节
+	short c = (short)a, d = (short)b;//short 占用2个字节
+
+
+	short x = -4321;
+	int m = x;
+	unsigned short n = (unsigned short)x;
+	unsigned int p = n;
+	return 0;
+}
+```
+
+
+
+![image-20220727211343097](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207272113660.png)
+
+### 2.2.9 数据的存储和排列
+
+#### 大小端
+
+![image-20220727212017604](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207272120669.png)
+
+#### 边界对齐
+
+- 假设给出的字为第n字,则访问的是
+  - **半字**:逻辑左移`1`位
+  - **字节**:逻辑左移`2`位
+
+![image-20220727212445347](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207272124245.png)
+
+#### 边界不对齐
+
+![image-20220727213220415](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207272132362.png)
+
+
+
+## 2.3 浮点数
+
+### 2.3.1 浮点数的表示
+
+###### 定点数的局限性
+
+![image-20220727213747993](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207272137812.png)
+
+- **浮点数是为了解决表示更大范围的数**
