浮点数的表示以及规格化    具体可以类比于科学计数法

--- a/计算机组成原理/第二章-数据的表示和运算.md
+++ b/计算机组成原理/第二章-数据的表示和运算.md
@@ -751,7 +751,9 @@ int main() {
 
 ![image-20220727213220415](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207272132362.png)
 
+###### 考点
 
+- 对齐时,变量存储地址需要是sizeof(变量)的整数倍
 
 ## 2.3 浮点数
 
@@ -762,3 +764,59 @@ int main() {
 ![image-20220727213747993](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207272137812.png)
 
 - **浮点数是为了解决表示更大范围的数**
+
+#### 科学计数法理解
+
+![image-20220731165741718](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207311657398.png)
+
+- **阶码 M**: 表示浮点数的范围以及小数点的具体位置
+  - 阶符
+    - 正:代表小数点向`右→`移动
+    - 负:代表小数点向`左←`移动
+  - 数值部分
+    - 阶码向左/右移动的`位数`
+- **尾数 E**: 数值部分长度n表示精度
+  - 数符
+    - 正:代表正数
+    - 负:代表负数
+  - 数值部分
+    - 代表能够表示的`精度`
+
+#### 浮点数的表示
+
+![image-20220731171320972](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207311713051.png)
+
+- `底数`:默认为`2`
+
+精度下降问题
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207311731665.png" alt="image-20220731173105016" style="zoom:50%;" />
+
+#### 浮点数的规格化
+
+![image-20220731173632549](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207311736099.png)
+
+- 尾数的最高位不能是无效值   `0`
+
+- 在存储空间固定,,**尽可能保证更大的精度**
+
+##### 尾数:左规右规
+
+![image-20220731174541265](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207311745303.png)
+
+##### 特点
+
+![image-20220731175542446](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207311755398.png)
+
+表示范围
+
+![image-20220731175937067](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207311759017.png)
+
+#### 总结
+
+![image-20220731180643016](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207311806048.png)
+
+### 2.3.2 IEEE 754 标准
+
+- 针对浮点数如何采用原码补码或者移码表示的标准,**避免数据传输与解析的问题**
+
