--- a/计算机组成原理/第二章-数据的表示和运算.md
+++ b/计算机组成原理/第二章-数据的表示和运算.md
@@ -16,13 +16,13 @@
 
 ![image-20220721092913733](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040538.png)
 
-##### 二进制`->`十进制
+##### 二进制`→`十进制
 
 ![image-20220721093705524](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040539.png)
 
 - 只需要每一位对应数字乘以权重即可
 
-##### 二进制`->`其他进制
+##### 二进制`→`其他进制
 
 ![image-20220721095733546](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040540.png)
 
@@ -36,7 +36,7 @@
   十六进制数，前缀是0x 后缀H
  ```
 
-##### 十进制`->`二进制
+##### 十进制`→`二进制
 
 ###### 整数部分
 
@@ -796,7 +796,7 @@ int main() {
 
 ![image-20220731173632549](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207311736099.png)
 
-- 尾数的最高位不能是无效值   `0`
+- **尾数的最高位不能是无效值**   `0`
 
 - 在存储空间固定,,**尽可能保证更大的精度**
 
@@ -820,3 +820,55 @@ int main() {
 
 - 针对浮点数如何采用原码补码或者移码表示的标准,**避免数据传输与解析的问题**
 
+#### 移码
+
+**移码=真值+偏置值**
+
+- 偏置值为`128D`
+
+![image-20220801104654310](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011047634.png)
+
+- 偏置值为`128-1=127D`
+
+  - mod 2^8
+
+    <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011117413.png" alt="image-20220801111716720" style="zoom:45%;" />
+
+![image-20220801105510947](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011055462.png)
+
+#### 浮点标准
+
+![image-20220801113646533](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011136814.png)
+
+- 阶码用`移码`表示
+  - 偏置值:`2^(n-1) -1` n为阶码的位数  
+    -  这里为`127`
+  - 真值表示范围: `-[ 2^(n-1) - 2 ] ~ 2^(n-1)-1` 
+    - 这里为`-126 ~ 127`
+  - **特殊用途**的移码
+    - 真值-128  ~  `1111 1111` 移码 8位全1  
+    - 真值 -127 ~  `0000 0000`  移码 8位全0
+
+##### 十进制→浮点数
+
+![image-20220801115307307](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011153960.png)
+
+**答案**
+
+![image-20220801115505466](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011155946.png)
+
+##### 浮点数→十进制
+
+![image-20220801185538490](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011855416.png)
+
+##### 浮点范围
+
+![image-20220801190745771](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011907090.png)
+
+###### 阶码全0/1情况
+
+![image-20220801191028185](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011910991.png)
+
+#### 浮点数的运算
+
+![image-20220801192857671](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011928850.png)
