浮点数的加减运算

--- a/计算机组成原理/第二章-数据的表示和运算.md
+++ b/计算机组成原理/第二章-数据的表示和运算.md
@@ -872,3 +872,44 @@ int main() {
 #### 浮点数的运算
 
 ![image-20220801192857671](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011928850.png)
+
+
+
+##### 例题
+
+> - 一般IEEE 754标准短浮点数类型32位(一般不直接考)
+>
+> - 题目说了*机器补码浮点运算*  ,需要提前用补码表示阶码和尾数
+
+![image-20220802094624737](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208020946948.png)
+
+0. 预先按照要求`用补码表示阶码和尾数`
+
+    - 由于不是IEEE 754标准,因此尾数不存在隐藏的`1.M`
+
+1. 对阶
+
+   - 求阶差`dE=Ex-Ey`
+
+   ![image-20220802095407564](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208020954888.png)
+
+2. 尾数加减
+
+   ![image-20220802095940179](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208020959449.png)
+
+
+3. 规格化
+
+   ![image-20220802100149498](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208021003835.png)
+
+4. 舍入
+
+   ![image-20220802100532690](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208021005082.png)
+
+   1. `0舍1入`
+
+   2. `末位恒置1`
+
+5. 判溢出
+
+![image-20220802101205753](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208021012154.png)
