浮点数的运算以及强制类型转换

--- a/计算机组成原理/第二章-数据的表示和运算.md
+++ b/计算机组成原理/第二章-数据的表示和运算.md
@@ -869,13 +869,13 @@ int main() {
 
 ![image-20220801191028185](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011910991.png)
 
-#### 浮点数的运算
+### 2.3.3 浮点数的运算
 
 ![image-20220801192857671](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208011928850.png)
 
 
 
-##### 例题
+#### 例题
 
 > - 一般IEEE 754标准短浮点数类型32位(一般不直接考)
 >
@@ -913,3 +913,22 @@ int main() {
 5. 判溢出
 
 ![image-20220802101205753](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208021012154.png)
+
+#### 浮点数的强制类型转换
+
+![image-20220802103255123](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208021033560.png)
+
+```cpp
+char -> int -> long -> double
+//在long默认为32位时,long -> double没有精度损失   
+//如果long为64位,则实际long精度为64位,但是double实际尾数只有(64=1+11+53) 53位
+//因此当64位long->double ,精度损失
+float -> double
+//没有精度损失
+//float (1+8+23) 32位
+//double (1+11+53) 64位
+```
+
+#### 总结
+
+![image-20220802103530407](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208021035516.png)
