补充原码的加减法

--- a/计算机组成原理/第二章-数据的表示和运算.md
+++ b/计算机组成原理/第二章-数据的表示和运算.md
@@ -111,6 +111,21 @@ $$
 -(2^n-1)\le x\le 2^n-1
 $$
 
+##### 原码加减法
+
+- 符号位和数值位分开进行
+- 加法
+  - 符号位相同
+    - `绝对值相加`即可
+  - 符号位不同
+    - 符号位变成绝对值大的数的符号位
+    - 大的绝对值减去小的绝对值
+- 减法
+  - `将减数符号位取反`
+  - `被减数`和`取反后的减数`做原码加法
+
+
+
 ###### 原码表示缺点
 
 ![image-20220721111646996](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202207221040548.png)
