--- a/计算机组成原理/第三章-存储系统.md
+++ b/计算机组成原理/第三章-存储系统.md
@@ -29,6 +29,14 @@
 ![image-20220802210618149](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208022106709.png)
 
 - `存取周期`:**连续**两次独立访问存储器的`最小时间间隔`
+- `cache`**命中率**:若同时访问
+  - cache**命中率**=`cache存取次数/cache存取次数+主存的存取次数`
+  - **两级存储系统平均访问时间** =`存储cache存取时间 * 命中率 +主存存取时间 * 命中率`
+
+- **cache主存系统的效率e**= `访问cache的时间/系统平均访存时间`
+  - `cache访问周期 / cache效率 = 平均访问时间`
+
+- `cache存取周期/主存存取周期 = cache访问时间/主存访问时间`
 
 ### 总结
 
