--- a/计算机组成原理/第三章-存储系统.md
+++ b/计算机组成原理/第三章-存储系统.md
@@ -41,3 +41,10 @@
 ### 总结
 
 ![image-20220802210850025](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208022109373.png)
+
+## 3.2 主存储器
+
+### 3.2.1 主存储器的基本组成
+
+
+
