第一章:操作系统的四大特征

--- a/操作系统/第一章-计算机系统概述.md
+++ b/操作系统/第一章-计算机系统概述.md
@@ -43,3 +43,38 @@
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181006533.png" alt="image-20220818100605521" style="zoom:50%;" />
 
+
+
+
+
+# 1.1_2 操作系统的四大特征
+
+## 1.并发
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181016960.png" alt="image-20220818101622466" style="zoom:50%;" />
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181024613.png" alt="image-20220818102433565" style="zoom:50%;" />
+
+## 2.共享
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181026362.png" alt="image-20220818102646102" style="zoom:50%;" />
+
+- **并发和共享的关系**
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181030718.png" alt="image-20220818103020822" style="zoom:50%;" />
+
+## 3.虚拟
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181034145.png" alt="image-20220818103421281" style="zoom:50%;" />
+
+
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181035785.png" alt="image-20220818103522170" style="zoom:50%;" />
+
+## 4.异步
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181038899.png" alt="image-20220818103831096" style="zoom:50%;" />
+
+## 总结
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181041452.png" alt="image-20220818104149330" style="zoom: 67%;" />
