--- a/操作系统/第一章-计算机系统概述.md
+++ b/操作系统/第一章-计算机系统概述.md
@@ -1,8 +1,10 @@
-# 1.1_1 操作系统的概念与功能
+# 操作系统基本概念
+
+## 1.1_1 操作系统的概念与功能
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208180929032.png" alt="image-20220818092919320" style="zoom:50%;" />
 
-## 1.管理系统资源
+### 1.管理系统资源
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208180941993.png" alt="image-20220818094153282" style="zoom:50%;" />
 
@@ -15,13 +17,13 @@
   - 安全
   - 高效
 
-## 2.提供上层服务
+### 2.提供上层服务
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208180946019.png" alt="image-20220818094626049" style="zoom:50%;" />
 
 - GUI
 
-### 用户接口
+#### 用户接口
 
 - 命令接口
 
@@ -39,7 +41,7 @@
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208180956792.png" alt="image-20220818095641224" style="zoom:50%;" />
 
-## 3.扩展硬件机器
+### 3.扩展硬件机器
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181006533.png" alt="image-20220818100605521" style="zoom:50%;" />
 
@@ -47,15 +49,15 @@
 
 
 
-# 1.1_2 操作系统的四大特征
+## 1.1_2 操作系统的四大特征
 
-## 1.并发
+### 1.并发
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181016960.png" alt="image-20220818101622466" style="zoom:50%;" />
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181024613.png" alt="image-20220818102433565" style="zoom:50%;" />
 
-## 2.共享
+### 2.共享
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181026362.png" alt="image-20220818102646102" style="zoom:50%;" />
 
@@ -63,7 +65,7 @@
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181030718.png" alt="image-20220818103020822" style="zoom:50%;" />
 
-## 3.虚拟
+### 3.虚拟
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181034145.png" alt="image-20220818103421281" style="zoom:50%;" />
 
@@ -71,10 +73,40 @@
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181035785.png" alt="image-20220818103522170" style="zoom:50%;" />
 
-## 4.异步
+### 4.异步
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181038899.png" alt="image-20220818103831096" style="zoom:50%;" />
 
-## 总结
+### 总结
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181041452.png" alt="image-20220818104149330" style="zoom: 67%;" />
+
+## 1.2 操作系统的发展历程
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181049350.png" alt="image-20220818104905041" style="zoom: 67%;" />
+
+### 1.手工操作阶段
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181052504.png" alt="image-20220818105207893" style="zoom: 50%;" />
+
+### 2.批处理阶段
+
+#### - 单道批处理
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181055082.png" alt="image-20220818105518261" style="zoom:50%;" />
+
+#### - 多道批处理
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181057904.png" alt="image-20220818105704124" style="zoom:50%;" />
+
+### 3.分时操作系统
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181100627.png" alt="image-20220818105953930" style="zoom:50%;" />
+
+### 4.实时操作系统
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181101066.png" alt="image-20220818110122160" style="zoom:50%;" />
+
+### 其他几种操作系统
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181102031.png" alt="image-20220818110218991" style="zoom:50%;" />
