操作系统的运行机制:分为内核态(管态)和用户态(目态)之间的转换

--- a/操作系统/第一章-计算机系统概述.md
+++ b/操作系统/第一章-计算机系统概述.md
@@ -91,11 +91,11 @@
 
 ### 2.批处理阶段
 
-#### - 单道批处理
+#### > 单道批处理
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181055082.png" alt="image-20220818105518261" style="zoom:50%;" />
 
-#### - 多道批处理
+#### > 多道批处理
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181057904.png" alt="image-20220818105704124" style="zoom:50%;" />
 
@@ -110,3 +110,43 @@
 ### 其他几种操作系统
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181102031.png" alt="image-20220818110218991" style="zoom:50%;" />
+
+## 1.3_1 操作系统的运行机制
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181111309.png" alt="image-20220818111123368" style="zoom:50%;" />
+
+- **指令**
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181113867.png" alt="image-20220818111341655" style="zoom: 50%;" />
+
+### 应用程序和内核
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181115356.png" alt="image-20220818111535743" style="zoom:50%;" />
+
+### 特权指令VS非特权指令
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208181121061.png" alt="image-20220818112109707" style="zoom:50%;" />
+
+#### 如何区分指令类型
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208182023347.png" alt="image-20220818112322798" style="zoom:50%;" />
+
+#### 状态
+
+- 内核态=核心态=`管态` `PSW=1`
+
+- 用户态=`目态`  `PSW=0`
+
+#### 如何实现`内核态`和`用户态`的切换
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191110655.png" alt="image-20220819111031222" style="zoom:50%;" />
+
+- 设置`PSW`状态位,发生状态转换
+- 校验当前应用程序是否植入`特权指令`,从而引发`中断信号`
+- `CPU`收到中断信号,立即`用户态`->`核心态`
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191115251.png" alt="image-20220819111544036" style="zoom:50%;" />
+
+### 总结
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191117055.png" alt="image-20220819111725942" style="zoom:50%;" />
