第一章节:中断和异常...实现原理:检查中断信号,,找到对应的中断处理程序,通过中断向量表:找到中断程序的首地址..或者是软件识别的方式:设置异常状态寄存器,按照优先级顺序查询,依次转到内核态的处理程序

--- a/操作系统/第一章-计算机系统概述.md
+++ b/操作系统/第一章-计算机系统概述.md
@@ -38,6 +38,7 @@
 - `程序接口`
   - `系统调用`:程序请求操作系统的唯一方式
     - 也被称为`广义指令`
+    - 通过`自陷`指令实现
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208180956792.png" alt="image-20220818095641224" style="zoom:50%;" />
 
@@ -150,3 +151,45 @@
 ### 总结
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191117055.png" alt="image-20220819111725942" style="zoom:50%;" />
+
+## 1.3_2 中断和异常
+
+### 中断的作用
+
+- `用户态`->`内核态`的**唯一方式**
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191123451.png" alt="image-20220819112327522" style="zoom:50%;" />
+
+### 中断的类型
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191125053.png" alt="image-20220819112459050" style="zoom:50%;" />
+
+- 考试中,一般惯称 外中断为中断;内终端为异常
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191512187.png" alt="image-20220819151211788" style="zoom:50%;" />
+
+#### 内中断
+
+- 内部`故障`
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191126639.png" alt="image-20220819112650677" style="zoom:50%;" />
+
+- `自陷`指令
+  - `断点`追踪程序
+  - 系统调用
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191132193.png" alt="image-20220819113245434" style="zoom:50%;" />
+
+#### 外中断
+
+- 实现`并发`的必不可少的阶段
+- 有时钟中断,IO中断...等等
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191136128.png" alt="image-20220819113634494" style="zoom:50%;" />
+
+### 总结
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191520828.png" alt="image-20220819152031477" style="zoom:50%;" />
+
+## 1.3_3 系统调用
+
