系统调用以及库函数调用

--- a/操作系统/第一章-计算机系统概述.md
+++ b/操作系统/第一章-计算机系统概述.md
@@ -193,3 +193,41 @@
 
 ## 1.3_3 系统调用
 
+### 系统调用和库函数的区别
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191528994.png" alt="image-20220819152850172" style="zoom:50%;" />
+
+### 系统调用的必须性
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191531053.png" alt="image-20220819153118647" style="zoom:50%;" />
+
+### 系统调用
+
+#### 1.功能分类
+
+- `共享资源`**都需要**系统调用
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191533926.png" alt="image-20220819153319353" style="zoom:50%;" />
+
+#### 2.调用过程
+
+- `自陷`引出中断处理程序,即`系统调用的入口程序`,中断向量的地址
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191540040.png" alt="image-20220819153955164" style="zoom:50%;" />
+
+- 找到对应的中断向量,引出`中断服务程序`
+
+### 库函数调用
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191547421.png" alt="image-20220819154726961" style="zoom:50%;" />
+
+- `陷入指令`是在`用户态`执行,执行之后CPU由`用户态`->`核心态`
+  - 发出`系统调用请求`在用户态,对系统调用的处理是在`核心态`
+  - 中间经历了CPU从`用户态`->`核心态`的转变
+- `内核态`别名:`管态`
+  - 因此`陷入指令`别名:访管指令
+
+### 总结
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191556324.png" alt="image-20220819155554508" style="zoom:50%;" />
+
