各体系结构的结构对比...分层结构,模块化,大内核,微内核,外核..的优缺点

--- a/操作系统/第一章-计算机系统概述.md
+++ b/操作系统/第一章-计算机系统概述.md
@@ -231,3 +231,49 @@
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191556324.png" alt="image-20220819155554508" style="zoom:50%;" />
 
+## 1.4_1 操作系统体系结构
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191616520.png" alt="image-20220819161648577" style="zoom:50%;" />
+
+### 计算机层次结构
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191618639.png" alt="image-20220819161846371" style="zoom:50%;" />
+
+### 大内核VS微内核
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191620386.png" alt="image-20220819162054911" style="zoom:50%;" />
+
+#### 变态对比
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191624510.png" alt="image-20220819162430590" style="zoom:50%;" />
+
+#### 性能对比
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191625314.png" alt="image-20220819162538797" style="zoom:50%;" />
+
+## 1.4_2 各体系结构对比
+
+<img src="C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220819162715016.png" alt="image-20220819162715016" style="zoom:67%;" />
+
+### 1.分层结构
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191646599.png" alt="image-20220819164606289" style="zoom:50%;" />
+
+### 2.模块化
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191702270.png" alt="image-20220819170229992" style="zoom:50%;" />
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191705667.png" alt="image-20220819170523838" style="zoom:50%;" />
+
+- 分层结构也是一种特殊的模块化结构
+  - 分层结构只允许`相邻模块`调用
+
+### 3.外核
+
+- 直接分配`未经抽象的硬件资源`&保证安全性
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191713294.png" alt="image-20220819171340997" style="zoom:50%;" />
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191716959.png" alt="image-20220819171624435" style="zoom:50%;" />
+
+- 缺点:更复杂,降低了操作系统的`一致性`
