--- a/操作系统/第一章-计算机系统概述.md
+++ b/操作系统/第一章-计算机系统概述.md
@@ -277,3 +277,17 @@
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191716959.png" alt="image-20220819171624435" style="zoom:50%;" />
 
 - 缺点:更复杂,降低了操作系统的`一致性`
+
+## 1.5 操作系统的引导
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191720069.png" alt="image-20220819172039122" style="zoom:50%;" />
+
+### 引导过程
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191726865.png" alt="image-20220819172613848" style="zoom:50%;" />
+
+#### 启动管理器(第4步)
+
+- 实现开机功能
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191728242.png" alt="image-20220819172823860" style="zoom: 67%;" />
