--- a/操作系统/第一章-计算机系统概述.md
+++ b/操作系统/第一章-计算机系统概述.md
@@ -253,7 +253,7 @@
 
 ## 1.4_2 各体系结构对比
 
-<img src="C:\Users\29608\AppData\Roaming\Typora\typora-user-images\image-20220819162715016.png" alt="image-20220819162715016" style="zoom:67%;" />
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191915733.png" alt="image-20220819162715016" style="zoom:67%;" />
 
 ### 1.分层结构
 
@@ -291,3 +291,23 @@
 - 实现开机功能
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191728242.png" alt="image-20220819172823860" style="zoom: 67%;" />
+
+## 1.6 虚拟机
+
+### 1.传统计算机
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191906059.png" alt="image-20220819190626312" style="zoom:50%;" />
+
+### 2.虚拟机
+
+- 第一类: 双系统...
+
+- 第二类: `VM Ware`
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191906580.png" alt="image-20220819190651621" style="zoom:50%;" />
+
+### 两类虚拟机管理程序对比
+
+- `ring0`代表最高级,`ring123`依次降低
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208191914359.png" alt="image-20220819191406038" style="zoom: 67%;" />
