一些特权指令的例子

--- a/操作系统/第一章-计算机系统概述.md
+++ b/操作系统/第一章-计算机系统概述.md
@@ -132,6 +132,8 @@
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208182023347.png" alt="image-20220818112322798" style="zoom:50%;" />
 
+- 例如:*清内存,置时钟,分配系统资源,修改虚存的段表或页表,修改用户的访问权限等...*
+
 #### 状态
 
 - 内核态=核心态=`管态` `PSW=1`
