进程控制:原语以及如何实现...原语的分类...

--- a/操作系统/第二章-进程与线程.md
+++ b/操作系统/第二章-进程与线程.md
@@ -46,3 +46,116 @@
   - 线程才是接受调度的基本单位;
 
 <img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208211312767.png" alt="image-20220821131159353" style="zoom:50%;" />
+
+## 2.1_2 进程的状态与转换
+
+### 进程的状态
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208211319951.png" alt="image-20220821131857310" style="zoom:50%;" />
+
+#### 创建态`&`就绪态
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208211455193.png" alt="image-20220821145332566" style="zoom:50%;" />
+
+#### 运行态
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208211459238.png" alt="image-20220821145909178" style="zoom: 50%;" />
+
+#### 阻塞态
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208211501994.png" alt="image-20220821150139710" style="zoom:50%;" />
+
+#### 终止态
+
+- `exit`终止进程的工作完成之后,进程彻底消失
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208211503241.png" alt="image-20220821150330879" style="zoom:50%;" />
+
+### 状态的转换
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208211514260.png" alt="image-20220821151345941" style="zoom: 67%;" />
+
+#### 基本状态
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208211516925.png" alt="image-20220821151551925" style="zoom: 67%;" />
+
+### 进程的组织
+
+#### 1.链接方式
+
+- `优先队列`的形式链接
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208211518112.png" alt="image-20220821151812289" style="zoom:67%;" />
+
+#### 2.索引方式
+
+- 以`索引表`的形式链接
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208211520260.png" alt="image-20220821151943825" style="zoom:50%;" />
+
+### 总结
+
+![image-20220821152050371](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212005216.png)
+
+## 2.1_3 进程控制
+
+- `进程控制`:**实现进程状态转换**
+
+<img src="https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212004711.png" alt="image-20220821200236436"  />
+
+### 原语实现进程控制
+
+> 原语:操作一气呵成
+
+![image-20220821200408430](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212004101.png)
+
+#### WHY?
+
+- **原语可以避免信息不统一的情况**
+
+![image-20220821200934839](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212009868.png)
+
+### 如何实现原语
+
+- `开关中断`实现
+
+![image-20220821201500314](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212015320.png)
+
+### 进程控制相关的原语
+
+#### 1.创建原语
+
+![image-20220821201913845](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212019817.png)
+
+#### 2.撤销原语
+
+![image-20220821202411332](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212024177.png)
+
+#### 3.唤醒原语和阻塞原语
+
+- **必须成对使用**
+
+![image-20220821202750646](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212027247.png)
+
+#### 4.切换原语
+
+![image-20220821203023500](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212030227.png)
+
+### 程序是如何运行的
+
+![image-20220821203337398](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212033443.png)
+
+#### 保留现场`&`恢复现场
+
+> 切换原语:运行环境 
+>
+> - 指的其实就是`保存现场`
+> - 保存寄存器的内容
+
+![image-20220821204152099](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212041433.png)
+
+![image-20220821204250711](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212042790.png)
+
+### 总结
+
+![image-20220821204827107](https://cdn.jsdelivr.net/gh/DZX-hhh/Pictures/images/202208212048517.png)
